# strparser

./: .gitignore  LICENSE  README.md  pyproject.toml
src/strparser/: __init__.py  substring.py
tests/: test_substring.py
